Atividadade com o Figma Iniciada

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,14 +1,216 @@
 :root {
-    --main-color: #000000;
-    --sub-color: #c0c0c0;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 10pt;
 }
 
-a {
+/*UPDATE-COM-PUT*/
+
+body {
+    background: #FEFFE4;
+}
+
+/*----------------------FORMS---------------*/
+
+header h1 {
+    color: #000;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+h1 {
+    color: #000;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+form {
+    width: 420px;
+    height: 439px;
+    flex-shrink: 0;
+    margin: auto;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    text-align: center;
+}
+
+::placeholder {
+    color: #9A9A9A;
+    font-family: Ubuntu;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.caixa-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.id-caixa{
+    font-weight: 800;
+    margin-left: 4.2rem;
+}
+
+.descricao-caixa{
+    font-weight: 800;
+    margin-left: 4.2rem;
+}
+
+.preco-caixa{
+    font-weight: 800;
+    margin-left: 4.2rem;
+}
+
+.imagem-caixa{
+    font-weight: 800;
+    margin-left: 4.2rem;
+}
+
+/*----------------------PRODUTOS---------------*/
+
+#listaProdutos {
+    display: flex;
+    width: 243px;
+    height: 38px;
+    flex-direction:column;
+    flex-shrink: 0;
+    color: #000;
+    font-family: Ubuntu;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: auto;
+}
+
+#produto-1 {
+    border-bottom: 1px solid #000;
+    background: #FFF;
+}
+
+#produto-2 {
+    border-bottom: 1px solid #000;
+    background: #FFF1C1;
+}
+
+#produto-3 {
+    border-bottom: 1px solid #000;
+    background: #FFF;
+}
+
+#produto-4 {
+    border-bottom: 1px solid #000;
+    background: #FFF1C1;
+}
+
+#btnAtualizar {
+    width: 167px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #48A4FA;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#reset {
+    width: 118px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #F59999;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+label {
+    margin: auto;
+}
+
+li {
+    margin: auto;
+}
+
+#id {
+    width: 304px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #000;
+    background: #FEFFE4;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+#descricao {
+    width: 304px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #000;
+    background: #FEFFE4;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+#preco {
+    width: 304px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #000;
+    background: #FEFFE4;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+#imagem {
+    width: 304px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #000;
+    background: #FEFFE4;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+.produto {
+    width: 1332px;
+    height: 43px;
+    flex-shrink: 0;
+    list-style: none;
+    border-bottom: 1px solid #000;
+    background: #FFF;
+    margin: auto;
+    display: flex;
+}
+
+/*a {
     text-decoration: none;
     color: var(--main-color);
 }
 
-/* DELETE-COM-DELETE*/
+ DELETE-COM-DELETE
 
 .produto {
     display: flex;
@@ -27,13 +229,13 @@ div#listaProdutos {
     background-color: var(--sub-color);
 }
 
-/* INDEX*/
+INDEX
 
 div#listaProdutos {
     border-style: outset;
 }
 
-/*CREATE-COM-POST*/
+CREATE-COM-POST
 
 form {
     display: flex;
@@ -61,4 +263,4 @@ ul {
 
 div#listaProdutos {
     border-style: outset;
-}
+}*/
