--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -78,6 +78,7 @@ button#btnAtualizar {
     border-radius: 4px;
     background: #007BED;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    
 }
 
 #btnAtualizar:disabled {
@@ -85,6 +86,7 @@ button#btnAtualizar {
     height: 46px;
     border-radius: 4px;
     background: #CAE6FF;
+    border: none;
 }
 
 #btnAtualizar:houver {
@@ -109,6 +111,7 @@ button#btnAtualizar {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    border: none;
 }
 
 button#reset {
@@ -121,6 +124,7 @@ button#reset {
     border-radius: 4px;
     background: #FF5F5F;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    border: none;
 }
 
 #reset:disabled {
@@ -129,6 +133,7 @@ button#reset {
     border-radius: 4px;
     background: #FFE2E2;
     color: #AEAEAE;
+    border: none;
 }
 
 #reset:houver {
@@ -153,6 +158,7 @@ button#reset {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    border: none;
 }
 /*----------------------PRODUTOS---------------*/
 
