--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -126,6 +126,32 @@ form {
 }
 
 /* --------------------Botões-------------------------*/
+
+.btn-confirmar {
+    width: 160px;
+    height: 60px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #3a9dfa;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: none;
+}
+
+.btn-confirmar:houver {
+    width: 160px;
+    height: 60px;
+    border-radius: 4px;
+    background: #007BED;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 button#btnAtualizar {
     margin-top: 1rem;
     margin-left: 2rem;
