--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -127,6 +127,25 @@ form {
 
 /* --------------------Botões-------------------------*/
 
+.btn-cadastrar {
+    width: 148px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #3a9dfa;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: none;
+    margin-top: 1rem;
+    margin-left: 2rem;
+}
+
 .btn-confirmar {
     width: 160px;
     height: 60px;
@@ -142,6 +161,8 @@ form {
     font-weight: 400;
     line-height: normal;
     border: none;
+    margin-top: 1rem;
+    margin-left: 2rem;
 }
 
 .btn-confirmar:houver {
