--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -72,7 +72,7 @@ nav {
 
 /*----------------------FORMS---------------*/
 
-header h1 {
+.titulo-pagina {
     color: var(--cor-texto);
     font-family: Ubuntu;
     font-size: 32px;
@@ -82,7 +82,7 @@ header h1 {
     padding-left: 2.5rem;
 }
 
-h1 {
+.titulo-pagina {
     color: var(--cor-texto);
     font-family: Ubuntu;
     font-size: 24px;
@@ -92,9 +92,18 @@ h1 {
     text-align: center;
 }
 
-form {
+.titulo-form {
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 1.5rem;
+    margin: 0 auto 1.8rem;
+    font-weight: 400;
+    color: var(--cor-texto);
+}
+
+.formulario{
     width: 420px;
-    height: 439px;
+    height: 360px;
     flex-shrink: 0;
     margin: auto;
     border-radius: 12px;
@@ -117,34 +126,35 @@ form {
     display: flex;
     flex-direction: column;
     padding-left: 2rem;
-}
-
-.label-caixa{
     font-weight: 800;
     margin-bottom: 5px;
     color: var(--cor-texto);
 }
 
-/* --------------------Botões-------------------------*/
+/* --------------------INPUTS------------------------- */
 
-.btn-cadastrar {
-    width: 148px;
-    height: 46px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    background: #3a9dfa;
-    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #FFF;
-    text-align: center;
-    font-family: Ubuntu;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    border: none;
-    margin-top: 1rem;
-    margin-left: 2rem;
+label.disabled,
+label.disabled ~ input::placeholder {
+    color: #949494;
 }
+
+.formulario>form input{
+    width: 300px;
+    border-radius: 0.25rem;
+    border: 1px solid #000;
+    background: #FEFFE4;
+    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+    padding: .5rem;
+    margin-bottom: .5rem;
+}
+
+.formulario>form input:disabled {
+    background: #f6f6f6;
+    box-shadow: none;
+    border-color: #bfbfbf;
+}
+
+/* --------------------Botões-------------------------*/
 
 .btn-confirmar {
     width: 160px;
@@ -163,6 +173,14 @@ form {
     border: none;
     margin-top: 1rem;
     margin-left: 2rem;
+}
+
+.btn-confirmar:active {
+    width: 160px;
+    height: 60px;
+    border-radius: 4px;
+    background: #007BED;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 .btn-confirmar:houver {
@@ -266,6 +284,93 @@ button#reset {
     line-height: normal;
     border: none;
 }
+
+.btn-cadastrar {
+    width: 148px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #3a9dfa;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #FFF;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: none;
+    margin-top: 1rem;
+    margin-left: 2.6rem;
+}
+
+.btn-cadastrar:active {
+    width: 148px;
+    height: 46px;
+    border-radius: 4px;
+    background: #007BED;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+.btn-cadastrar:disabled {
+    width: 148px;
+    height: 46px;
+    border-radius: 4px;
+    background: #CAE6FF;
+    border: none;
+}
+
+.btn-cadastrar:houver {
+    width: 167px;
+    height: 46px;
+    border-radius: 4px;
+    background: #007BED;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.btn-cancelar {
+    width: 118px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #F59999;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #000;
+    text-align: center;
+    font-family: Ubuntu;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: none;
+    margin-left: 1.4rem;
+}
+
+.btn-cancelar:active {
+    width: 118px;
+    height: 46px;
+    border-radius: 4px;
+    background: #FF5F5F;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    border: none;
+}
+
+.btn-cancelar:disabled {
+    width: 118px;
+    height: 46px;
+    border-radius: 4px;
+    background: #FFE2E2;
+    color: #AEAEAE;
+    border: none;
+}
+
+.btn-cancelar:houver {
+    width: 118px;
+    height: 46px;
+    border-radius: 4px;
+    background: #FF5F5F;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 /*----------------------PRODUTOS---------------*/
 
 #listaProdutos {
@@ -287,48 +392,10 @@ li {
     margin: auto;
 }
 
-#produto-1 {
-    margin-top: 20px;
-}
-
-#id {
-    width: 304px;
-    height: 34px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid #000;
-    background: #FEFFE4;
-    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
-}
-
-#descricao {
-    width: 304px;
-    height: 34px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid #000;
-    background: #FEFFE4;
-    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
-}
-
-#preco {
-    width: 304px;
-    height: 34px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid #000;
-    background: #FEFFE4;
-    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
-}
-
-#imagem {
-    width: 304px;
-    height: 34px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid #000;
-    background: #FEFFE4;
-    box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.25) inset;
+.titulo-lista {
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
 }
 
 .produto {
@@ -370,7 +437,7 @@ li {
 
 /* ----------------TEMA CLARO/ESCURO------------------ */
 
-.bts.bts-base {
+.bts-base {
     margin: auto;
     padding: 0;
     width: 100px;
@@ -406,63 +473,3 @@ li {
     transform: translateX(50px);
     transition: all .5s;
 }
-
-/*a {
-    text-decoration: none;
-    color: var(--main-color);
-}
-
- DELETE-COM-DELETE
-
-.produto {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0;
-}
-
-div#listaProdutos {
-    border-style: outset;
-}
-
-.botao-delete {
-    border-style: outset;
-    background-color: var(--sub-color);
-}
-
-INDEX
-
-div#listaProdutos {
-    border-style: outset;
-}
-
-CREATE-COM-POST
-
-form {
-    display: flex;
-    justify-content: center;
-    box-sizing: content-box;
-    align-items: center;
-}
-
-input {
-    margin: 10px;
-}
-
-#btnCadastrar {
-    border-style: solid;
-    margin: 10px;
-}
-
-ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0;
-}
-
-div#listaProdutos {
-    border-style: outset;
-}*/
